k8s/deployments/alertmanager/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: alertmanager
  labels:
    app: alertmanager
spec:
  selector:
    app: alertmanager
  type: ClusterIP
  ports:
    - name: alertmanager
      protocol: TCP
      port: 9093
      targetPort: http
