k8s/deployments/alertmanager/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alertmanager
  labels:
    app.kubernetes.io/name: alertmanager
    app.kubernetes.io/instance: alertmanager
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod-issuer
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: alertmanager.super001.com
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: alertmanager
                port:
                  number: 9093
  tls:
  - hosts:
    - alertmanager.super001.com
    secretName: alertmanager-tls-ingress
